feat: add para metadata
